se hizo el content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  
+  <main>
+    
+
+    <section class="text-main">
+
+        <div class="tittle">
+            <h2>Call of duty Warzone</h2>
+        </div>
+
+        <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam ducimus fuga, rem soluta sint tempora veritatis est consectetur quis, perferendis accusamus repellat praesentium nulla, ad iusto voluptatum dicta sequi repudiandae. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi dolorum tenetur voluptatibus, quia quisquam facere omnis autem enim sint iusto in repellendus sapiente, sed ipsa. Molestiae ipsum iure ducimus. <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, dolor sequi. Tenetur, at! Debitis molestiae accusantium ut nisi soluta! Molestiae officiis magni repellat. Aliquam, alias qui! Odit dicta est eius! <br>
+        Aut eligendi, expedita necessitatibus vitae eius, nihil illum aliquam dolor modi, a totam omnis minus ipsum tempore quod harum minima nobis odit nisi architecto! Fuga modi optio reiciendis eligendi velit?
+        Assumenda omnis architecto minus molestiae, accusamus nostrum ipsa cumque voluptates mollitia optio delectus ad? Id, ducimus ea? Veniam corporis, alias, totam, accusamus consequatur at saepe inventore aliquid quam laboriosam ex. <br>
+        Quisquam placeat cumque molestias fuga doloremque totam natus amet cupiditate necessitatibus quos neque maxime molestiae debitis, libero adipisci nobis maiores esse excepturi quidem autem. Culpa voluptatibus numquam exercitationem velit? Quasi! <br>
+        Sit commodi ratione accusantium, tempora quam asperiores voluptatum nisi distinctio animi itaque iste! Ullam, reprehenderit maiores nihil architecto minus voluptas, eum dolorem, qui dolore rerum ea quidem similique possimus. Voluptatibus.</p>
+
+        <img class="img-warzone" src="https://i0.wp.com/xxboxnews.blob.core.windows.net/prod/sites/4/SECONDARY_KA_16_9_BRANDED_083123-Copy-f576af011ceabf3e9dda.jpg?resize=1200%2C675&ssl=1" alt="imagen de warzone 3">
+    </section>
+
+  </main>
 </body>
 </html>
