--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header">
             <div class="header-content">
-                <h1>BLOG MIO</h1>
+                <h1>VIDEOJUEGOS</h1>
             </div>
         </div>
     </header>
