se hizo el footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  
+    <footer>
+        <h3 class="tittle-footer">FOOTER</h3>
+        <div class="contetn-footer">
+            <h4>Home</h4>
+            <h4>Contactanos</h4>
+            <h4>Politicas de privacidad</h4>
+        </div>
+    </footer>
 </body>
 </html>
